# ctm-ai

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  ctm_base.py  ctm_demo.py  ctm_sarcasm.py  pyproject.toml  requirements.txt
backend/: Depolyment.md  README.md  app.py  app_wrapper.py  chunk_processor.py  config.py  create_app.py  file_handler.py  state.py
baselines/: baseline_gemini.py  baseline_without_tree.py
configs/: ctm_config_base.py  sarcasm_ctm_config.json
ctm/: ctm_base.py
ctm_ai/: 00_vars.sh
ctm_conf/: mustard_qwen3vl_instruct_config.json  mustard_qwen3vl_thinking_config.json  sarcasm_ctm_config.json  sarcasm_ctm_qwen_config.json  tooluse_ctm_config.json  urfunny_qwen3omni_config.json  urfunny_qwen3vl_flash_config.json  urfunny_qwen3vl_instruct_v28_config.json  urfunny_qwen3vl_thinking_config.json  urfunny_qwen3vl_thinking_v28_config.json  urfunny_test_config.json  urfunny_test_gemini_v28_config.json  urfunny_test_qwen_config.json  urfunny_test_qwen_v10_config.json  urfunny_test_qwen_v11_config.json  urfunny_test_qwen_v12_config.json  urfunny_test_qwen_v1_config.json  urfunny_test_qwen_v2_config.json  urfunny_test_qwen_v3_config.json  urfunny_test_qwen_v4_config.json  urfunny_test_qwen_v5_config.json  urfunny_test_qwen_v6_config.json  urfunny_test_qwen_v7_config.json  urfunny_test_qwen_v8_config.json  urfunny_test_qwen_v9_config.json  web_ctm_config.json
ctms/: __init__.py  ctm_base.py  ctm_sarcasm_detection.py
examples/: ctm_sarcasm.py  ctm_whatname.py  emotion_classification.py  monkeytype.sqlite3  sarcasm_detection.py  what_theperson_name.py
exp_affective/: analyze_results.py  analyze_v12.py  analyze_winners.py  analyze_winners_v.py  calc_baseline_res.py  calc_ctm_res.py  ctm_mustard_gemini_count10.jsonl  ctm_urfunny_qwen3vl_instruct_v28.jsonl  ctm_urfunny_qwen3vl_thinking_v28.jsonl  dataset_configs.py  debate_mustard_gemini_100.jsonl  debate_mustard_gemini_full.jsonl  debate_urfunny_gemini_100.jsonl  ensemble_mustard_gemini_100.jsonl  ensemble_mustard_gemini_100_v1.jsonl  ensemble_mustard_gemini_100_v2.jsonl  ensemble_mustard_gemini_full.jsonl  ensemble_urfunny_gemini_100.jsonl  ensemble_urfunny_gemini_100_v1.jsonl  ensemble_urfunny_gemini_100_v2.jsonl  ensemble_urfunny_gemini_100_v3.jsonl  ensemble_urfunny_gemini_100_v5.jsonl  ensemble_urfunny_gemini_100_v6.jsonl  ensemble_urfunny_gemini_full.jsonl  llm_utils.py  metagpt_litellm_provider.py  orchestra_mustard_gemini_100.jsonl  patch_skips.py  (+52 more)
(+361 files in other folders)
